# keyforge95

./: .devcontainer.json  .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  generation.rs  index.html  justfile
.cargo/: config.toml
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clippy.yml  documentation.yml  publish.yml  test.yml
src/: frontend_web.rs  generation.rs  lib.rs  modals.rs  tests.rs  validation.rs
