[package]
name = "keyforge95"
description = "Library for product key generation / validation for Windows 95 and other Microsoft products"
authors = ["Nando Lawson"]
version = "3.1.0"
categories = ["algorithms", "development-tools"]
keywords = ["generator", "no_std", "product_key", "validator", "wasm"]
readme = "README.md"
license = "GPL-3.0"
exclude = [".dockerignore", ".github/", "pkg/", "target/", ".gitignore", "Dockerfile"]
repository = "https://github.com/nandolawson/keyforge95"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]
doc = true
doctest = true
harness = true
proc-macro = false
test = true

[dependencies]
rand_core = { version = "0.6.4", features = ["getrandom"] }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.95"

[lints.clippy]
cargo = "deny"
complexity = "deny"
correctness = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"

[lints.rust]
future-incompatible = "deny"
keyword-idents = "deny"
let-underscore = "deny"
nonstandard-style = "deny"
refining-impl-trait = "deny"
rust-2018-compatibility = "deny"
rust-2018-idioms = "deny"
rust-2021-compatibility = "deny"
rust-2024-compatibility = "deny"
warnings = "deny"

[profile.dev]
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = "none"
incremental = true
lto = true
opt-level = 3
panic = "abort"
strip = true
