[package]
authors = ["Nando Lawson"]
categories = ["algorithms", "development-tools"]
description = "Library for product key generation / validation for Windows 95 and other Microsoft products"
edition = "2024"
exclude = [
    ".devcontainer/",
    ".github/",
    "pkg/",
    "target/",
    ".gitignore",
    "CONTRIBUTING.md",
    "Dockerfile",
]
keywords = ["generator", "no_std", "product_key", "validator", "wasm"]
license = "GPL-3.0"
name = "keyforge95"
readme = "README.md"
repository = "https://github.com/nandolawson/keyforge95"
version = "4.1.0"

[lib]
crate-type = ["rlib", "cdylib"]
doc = true
doctest = true
harness = true
proc-macro = false
test = true

[features]
generation = ["getrandom"]

[dependencies]
getrandom = { version = "0.3.2", optional = true }

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.2", features = ["wasm_js"], optional = true }
wasm-bindgen = "0.2.100"

[lints.clippy]
cargo = { level = "warn", priority = 0 }
complexity = { level = "deny", priority = 2 }
correctness = { level = "forbid", priority = 3 }
pedantic = { level = "warn", priority = -1 }
perf = { level = "deny", priority = 2 }
style = { level = "warn", priority = -2 }
suspicious = { level = "forbid", priority = 3 }

[lints.rust]
future-incompatible = { level = "deny", priority = 3 }
keyword-idents = { level = "deny", priority = 2 }
let-underscore = { level = "deny", priority = 1 }
nonstandard-style = { level = "warn", priority = -2 }
refining-impl-trait = { level = "deny", priority = 1 }
rust-2018-compatibility = { level = "deny", priority = 2 }
rust-2018-idioms = { level = "deny", priority = 2 }
rust-2021-compatibility = { level = "forbid", priority = 3 }
rust-2024-compatibility = { level = "forbid", priority = 4 }
unused = { level = "warn", priority = -1 }
warnings = { level = "warn", priority = 0 }

[profile.dev]
codegen-units = 256
debug = true
incremental = true
lto = false
opt-level = 0
panic = "unwind"
strip = false

[profile.release]
codegen-units = 1
debug = "none"
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
